# sine_polynomial_approximation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: aligned_allocator.h  avx_mathfun.h  chebyshev_sine.h  detect_architecture.h  sse_mathfun.h
notebooks/: chebyshev_derivation.ipynb  chebyshev_derivation.txt  plot_sine_error.ipynb
src/: benchmark_chebyshev_sine.cpp  chebyshev_sine.h  derive_horner_polynomial.cpp
